--- a/style.css
+++ b/style.css
@@ -43,7 +43,11 @@ section{
     border: 1px solid black;
     background-color: yellow;
 }
- 
+
+#site{
+    float: left;
+}
+
 #list tr{
     border: 1px solid black;  
     border-collapse: collapse;
