--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html {
     font-family: 'Roboto', sans-serif;
     background: url(./img/Background.jpg);
     background-size: 100%;
+    font-size: xx-large;
 }
 header{
     background-color: black;
