--- a/css/main.scss
+++ b/css/main.scss
@@ -2,13 +2,9 @@ html {
     text-align: center;
     font-family: 'Roboto', sans-serif;
     background: url(./img/Background.jpg);
-    background-size: 100%;
-    font-size: xx-large;
-    width: 500px;
-    align-items: center;
+    background-size: cover;
 }
 header{
-    size: 100%;
     background-color: black;
     width: 100%;
     height: 60px;
@@ -19,25 +15,25 @@ header{
     z-index: 1;
 }
 
-#logo{
+#logoleft{
     float: left;
     padding-left: 10px;
+    img{
+        height: 50px;
+        padding-top: 5px;
+    }
 }
 
-#namelogo{
+#logoright{
     float: right;
     padding-right: 10px;
-}
-
-#logo img{
-    height: 50px;
-    padding-top: 5px;
-}
-
-#namelogo img{
+    img{
     height: 40px;
     padding-top: 10px;
+    }
 }
+
+
 
 section{
     margin: 70px auto 0 auto;
