--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html {
 header {
   background-color: black;
   width: 100%;
-  height: 60px;
+  height: 1fr;
   position: fixed;
   top: 0;
   left: 0;
