--- a/css/main.css
+++ b/css/main.css
@@ -17,48 +17,33 @@ header {
   z-index: 1;
 }
 
-#logoleft {
+header #logoleft {
   float: left;
   padding-left: 10px;
 }
 
-#logoleft img {
+header #logoleft img {
   height: 50px;
   padding-top: 5px;
 }
 
-#logoright {
+header #logoright {
   float: right;
   padding-right: 10px;
 }
 
-#logoright img {
+header #logoright img {
   height: 40px;
   padding-top: 10px;
 }
 
 section {
-  margin: 70px;
-}
-
-section form {
-  padding: auto;
-  width: 100%;
-}
-
-section div {
-  padding: auto;
-  width: 100%;
-  position: relative;
-}
-
-#sum td {
-  border: 1px solid black;
-  background-color: yellow;
-}
-
-#list tr {
-  border: 1px solid black;
-  border-collapse: collapse;
+  margin-top: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=main.css.map */
