--- a/css/main.scss
+++ b/css/main.scss
@@ -41,6 +41,12 @@ section {
     margin-top: 70px;
     display: flex;
     justify-content: center;
+    input{
+        width: 50px;
+    }
+    td{
+        width: 20px
+    }
 }
 
 
