--- a/css/main.css
+++ b/css/main.css
@@ -46,4 +46,12 @@ section {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
+section input {
+  width: 50px;
+}
+
+section td {
+  width: 20px;
+}
 /*# sourceMappingURL=main.css.map */
