--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,7 @@
 html {
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    background: url(./img/Background.jpg);
-    background-size: cover;
+    background-image: url("../img/Background.jpg");
 }
 
 header {
