--- a/css/main.scss
+++ b/css/main.scss
@@ -59,6 +59,7 @@ section {
     td{
         border-style: solid;
         border-width: 1px;
+        background-color: white;
     }
     th{
         background-color: gold;
